[gd_scene load_steps=51 format=4 uid="uid://bcxdf5c5vlqeq"]

[ext_resource type="Script" path="res://scripts/get_map_coord.gd" id="1_nnkpf"]
[ext_resource type="TileSet" uid="uid://t357gnsrojuh" path="res://textures/area1.tres" id="2_wcu8i"]
[ext_resource type="AudioStream" uid="uid://dbboemw23xegk" path="res://sounds/Level Victory.mp3" id="3_ysjtm"]
[ext_resource type="Script" path="res://scripts/player.gd" id="4_cr1hf"]
[ext_resource type="Texture2D" uid="uid://b21y2f46l3cnu" path="res://textures/loose sprites.png" id="5_30cpv"]
[ext_resource type="Texture2D" uid="uid://cbf8waqy0cqu7" path="res://textures/iso_tileset.png" id="6_naleb"]
[ext_resource type="AudioStream" uid="uid://bnh6c8padev3p" path="res://sounds/Walk.wav" id="7_iv4gl"]
[ext_resource type="AudioStream" uid="uid://vdqbu3me0eqx" path="res://sounds/Lost Life.wav" id="8_44b84"]
[ext_resource type="Script" path="res://scripts/level_score.gd" id="9_182uc"]
[ext_resource type="Texture2D" uid="uid://cr2ofpefw4esk" path="res://textures/area_2_tileset.png" id="9_qjy0j"]
[ext_resource type="Script" path="res://scenes/levels/total_score.gd" id="10_figv6"]
[ext_resource type="Script" path="res://scenes/levels/total_lives.gd" id="11_u1bd8"]
[ext_resource type="Texture2D" uid="uid://chnxf0ujd0kvq" path="res://textures/area_3_tileset.png" id="12_m2nt4"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="12_mstmc"]
[ext_resource type="Texture2D" uid="uid://dapnqabsdbfqt" path="res://textures/Zombie.png" id="13_k1g4d"]
[ext_resource type="AudioStream" uid="uid://jq6sskna84md" path="res://sounds/8-Bit-Adventure.mp3" id="14_xdnfn"]
[ext_resource type="AudioStream" uid="uid://dayr6beq5ix61" path="res://sounds/8-Bit-Determination.mp3" id="15_ilqkr"]
[ext_resource type="AudioStream" uid="uid://bm77iinsahqcu" path="res://sounds/8-Bit-Groove.mp3" id="16_3k5xo"]
[ext_resource type="AudioStream" uid="uid://nse8551ks35" path="res://sounds/8-Bit-Menu.mp3" id="17_4q7jc"]
[ext_resource type="AudioStream" uid="uid://bg736hv8a684p" path="res://sounds/8-Bit-Mountains-Ahead.mp3" id="18_oii5l"]
[ext_resource type="AudioStream" uid="uid://beyth5y08ieft" path="res://sounds/8-Bit-Shadows.mp3" id="19_fla7y"]
[ext_resource type="AudioStream" uid="uid://dat8sjbvtsnrv" path="res://sounds/8-Bit-Success.mp3" id="20_1wlkg"]
[ext_resource type="Script" path="res://scenes/levels/levelmenu.gd" id="22_pvlym"]
[ext_resource type="Script" path="res://scripts/shadows.gd" id="24_y7pcv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vw4w1"]
atlas = ExtResource("6_naleb")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82ulo"]
atlas = ExtResource("9_qjy0j")
region = Rect2(224, 0, 32, 32)

[sub_resource type="Animation" id="Animation_fjavp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_82nnu"]
resource_name = "walk down"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_cceoa"]
resource_name = "walk downleft"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 1), Vector2i(2, 1)]
}

[sub_resource type="Animation" id="Animation_ucsvk"]
resource_name = "walk downright"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 7), Vector2i(2, 7)]
}

[sub_resource type="Animation" id="Animation_qegsm"]
resource_name = "walk left"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 2), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_ex1b8"]
resource_name = "walk right"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 6), Vector2i(2, 6)]
}

[sub_resource type="Animation" id="Animation_vaehf"]
resource_name = "walk up"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 4), Vector2i(2, 4)]
}

[sub_resource type="Animation" id="Animation_cjcad"]
resource_name = "walk upleft"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 3), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_486o4"]
resource_name = "walk upright"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 5), Vector2i(2, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2h7bs"]
_data = {
"RESET": SubResource("Animation_fjavp"),
"walk down": SubResource("Animation_82nnu"),
"walk downleft": SubResource("Animation_cceoa"),
"walk downright": SubResource("Animation_ucsvk"),
"walk left": SubResource("Animation_qegsm"),
"walk right": SubResource("Animation_ex1b8"),
"walk up": SubResource("Animation_vaehf"),
"walk upleft": SubResource("Animation_cjcad"),
"walk upright": SubResource("Animation_486o4")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_7gaad"]
atlas = ExtResource("13_k1g4d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3f68"]
atlas = ExtResource("13_k1g4d")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu55p"]
atlas = ExtResource("13_k1g4d")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwam0"]
atlas = ExtResource("13_k1g4d")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p6rs"]
atlas = ExtResource("13_k1g4d")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sg7n"]
atlas = ExtResource("13_k1g4d")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwds6"]
atlas = ExtResource("13_k1g4d")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qmn8"]
atlas = ExtResource("13_k1g4d")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpl3t"]
atlas = ExtResource("13_k1g4d")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0crk8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gaad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3f68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu55p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwam0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p6rs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sg7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwds6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qmn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpl3t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bjtla"]
atlas = ExtResource("12_m2nt4")
region = Rect2(224, 0, 32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_dcpwo"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_g1jki"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_ii1sb"]
font_size = 8

[node name="Base2" type="Node2D"]
z_as_relative = false
y_sort_enabled = true
position = Vector2(213, 120)
script = ExtResource("1_nnkpf")
maxLevelScore = 200
levelScoreDecliner = 10
level_number = 3
backgroundMusicTrack = 1

[node name="Ground" type="TileMapLayer" parent="."]
z_as_relative = false
tile_map_data = PackedByteArray("AAD//wAAAAADAAAAAAD/////AAAAAAAAAAD///7/AAADAAAAAAD//wEAAAADAAAAAAD//wIAAAADAAAAAAD//wMAAAAAAAAAAAD//wQAAAADAAAAAAAAAAQAAAADAAAAAAAAAAMAAAAAAAAAAAAAAAIAAAADAAAAAAAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAP7/AAAAAAAAAAAAAP3/AAAAAAAAAAD+//3/AAAAAAAAAAD+//7/AAAAAAAAAAD+/wAAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wIAAAADAAAAAAD+/wQAAAADAAAAAAD9/wQAAAADAAAAAAD9/wMAAAADAAAAAAD9/wIAAAADAAAAAAD9/wEAAAAAAAAAAAD9/wAAAAADAAAAAAD9////AAAAAAAAAAD9//7/AAADAAAAAAD9//3/AAAAAAAAAAACAAQAAAADAAAAAAABAAQAAAADAAAAAAABAAMAAAAAAAAAAAABAAIAAAADAAAAAAABAAEAAAADAAAAAAABAAAAAAAAAAAAAAABAP//AAADAAAAAAABAP7/AAADAAAAAAABAP3/AAADAAAAAAACAAMAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAAAAAAAAAAAAAACAP//AAAAAAAAAAACAP7/AAAAAAAAAAACAP3/AAAAAAAAAAACAPz/AAADAAAAAAABAPz/AAADAAAAAAAAAPz/AAADAAAAAAD///z/AAADAAAAAAD+//z/AAADAAAAAAD9//z/AAADAAAAAAD8//z/AAADAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAADAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAADAAIAAAADAAAAAAADAAEAAAADAAAAAAADAAAAAAADAAAAAAADAP//AAADAAAAAAADAPz/AAADAAAAAAADAP3/AAADAAAAAAADAP7/AAADAAAAAAADAAMAAAADAAAAAAADAAQAAAADAAAAAAD7//z/AAADAAAAAAD7//3/AAADAAAAAAD7//7/AAADAAAAAAD7////AAADAAAAAAD7/wAAAAADAAAAAAD7/wEAAAADAAAAAAD7/wIAAAADAAAAAAD7/wMAAAADAAAAAAD7/wQAAAAAAAAAAAD+////AAAAAAAAAAD///3/AAAAAAAAAAD7/wUAAAADAAAAAAD8/wUAAAADAAAAAAD6/wQAAAACAAAAAAD6/wUAAAADAAAAAAD5/wUAAAADAAAAAAD5/wQAAAADAAAAAAD5/wMAAAADAAAAAAD6/wMAAAADAAAAAAA=")
tile_set = ExtResource("2_wcu8i")

[node name="Walls" type="TileMapLayer" parent="."]
z_index = 2
z_as_relative = false
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD8/wIAAAAGAAAAAAD8/wEAAAAGAAAAAAD9/wEAAAAGAAAAAAD+/wEAAAAGAAAAAAD+/wAAAAAGAAAAAAD+////AAAGAAAAAAD//wEAAAAGAAAAAAAAAAEAAAAGAAAAAAAAAAAAAAAGAAAAAAAAAP7/AAAGAAAAAAAAAP3/AAAGAAAAAAAAAPz/AAAGAAAAAAD+//3/AAAGAAAAAAD8//3/AAAGAAAAAAD7////AAAGAAAAAAD8////AAAGAAAAAAD8/wMAAAAGAAAAAAA=")
tile_set = ExtResource("2_wcu8i")
y_sort_origin = 1

[node name="LevelVictory" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ysjtm")
volume_db = -24.0

[node name="player" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(-64, 16)
script = ExtResource("4_cr1hf")

[node name="Sprite2D" type="Sprite2D" parent="player"]
z_index = 2
z_as_relative = false
y_sort_enabled = true
position = Vector2(0, -8)
texture = ExtResource("5_30cpv")
hframes = 8
vframes = 8

[node name="Sprite2D3" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
y_sort_enabled = true
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(-16, 16)

[node name="Sprite2D5" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(16, 0)

[node name="Sprite2D9" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(-16, 0)

[node name="Sprite2D6" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(16, 16)

[node name="Sprite2D7" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(32, 8)

[node name="Sprite2D8" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(-32, 8)

[node name="Sprite2D4" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(0, 24)

[node name="Sprite2D10" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(0, -8)

[node name="Sprite2D11" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.392157)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_82ulo")
offset = Vector2(0, 8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_2h7bs")
}

[node name="Walk" type="AudioStreamPlayer" parent="player"]
stream = ExtResource("7_iv4gl")

[node name="LostLife" type="AudioStreamPlayer" parent="player"]
stream = ExtResource("8_44b84")
volume_db = -24.0

[node name="enemy_a2" type="Node2D" parent="."]
z_index = 2
z_as_relative = false
y_sort_enabled = true
position = Vector2(64, 16)
script = ExtResource("12_mstmc")
direction = Vector2i(0, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="enemy_a2"]
position = Vector2(4, -15)
sprite_frames = SubResource("SpriteFrames_0crk8")

[node name="nextmove" type="Sprite2D" parent="enemy_a2"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
y_sort_enabled = true
position = Vector2(16, -15)
texture = SubResource("AtlasTexture_bjtla")
offset = Vector2(-16, 16)

[node name="enemy_a4" type="Node2D" parent="."]
z_index = 2
z_as_relative = false
y_sort_enabled = true
position = Vector2(32, -32)
script = ExtResource("12_mstmc")
direction = Vector2i(0, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="enemy_a4"]
position = Vector2(4, -15)
sprite_frames = SubResource("SpriteFrames_0crk8")

[node name="nextmove" type="Sprite2D" parent="enemy_a4"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
y_sort_enabled = true
position = Vector2(16, -15)
texture = SubResource("AtlasTexture_bjtla")
offset = Vector2(-16, 16)

[node name="enemy_a3" type="Node2D" parent="."]
z_index = 2
z_as_relative = false
y_sort_enabled = true
position = Vector2(-32, -32)
script = ExtResource("12_mstmc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="enemy_a3"]
position = Vector2(4, -15)
sprite_frames = SubResource("SpriteFrames_0crk8")

[node name="nextmove" type="Sprite2D" parent="enemy_a3"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
y_sort_enabled = true
position = Vector2(16, -15)
texture = SubResource("AtlasTexture_bjtla")
offset = Vector2(-16, 16)

[node name="8-bit-adventure" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_xdnfn")
volume_db = -24.0

[node name="8-bit-determination" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_ilqkr")
volume_db = -24.0

[node name="8-bit-groove" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_3k5xo")
volume_db = -32.0

[node name="8-bit-menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_4q7jc")
volume_db = -24.0

[node name="8-bit-mountains-ahead" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_oii5l")
volume_db = -32.0

[node name="8-bit-shadows" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_fla7y")
volume_db = -32.0

[node name="8-bit-success" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_1wlkg")
volume_db = -32.0

[node name="UI" type="Control" parent="."]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="dead" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -75.0
offset_right = 34.5
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
text = "You Died"

[node name="won" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -75.0
offset_right = 37.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
text = "You Won!"

[node name="levelScore" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = -213.0
offset_top = -120.0
offset_right = -173.0
offset_bottom = -97.0
label_settings = SubResource("LabelSettings_dcpwo")
script = ExtResource("9_182uc")

[node name="totalScore" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = -213.0
offset_top = -107.0
offset_right = -173.0
offset_bottom = -84.0
label_settings = SubResource("LabelSettings_g1jki")
script = ExtResource("10_figv6")

[node name="totalLives" type="Label" parent="UI"]
layout_mode = 0
offset_left = 149.0
offset_top = -120.0
offset_right = 189.0
offset_bottom = -97.0
label_settings = SubResource("LabelSettings_ii1sb")
script = ExtResource("11_u1bd8")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("22_pvlym")
next_level = "res://scenes/levels/level4.tscn"

[node name="Next" type="Button" parent="UI/VBoxContainer"]
visible = false
layout_mode = 2
text = "Next"

[node name="Retry" type="Button" parent="UI/VBoxContainer"]
visible = false
layout_mode = 2
text = "Retry"

[node name="Levels" type="Button" parent="UI/VBoxContainer"]
visible = false
layout_mode = 2
text = "Levels"

[node name="shadows" type="TileMapLayer" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.768627)
z_index = 1
z_as_relative = false
tile_set = ExtResource("2_wcu8i")
script = ExtResource("24_y7pcv")

[connection signal="pressed" from="UI/VBoxContainer/Next" to="UI/VBoxContainer" method="_on_next_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/Retry" to="UI/VBoxContainer" method="_on_retry_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/Levels" to="UI/VBoxContainer" method="_on_levels_pressed"]
